# dicta-on-sagemaker

./: .gitignore  .gitleaks.toml  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
agentcore/genai-loft-demo/: .gitignore  README.md  pyproject.toml  scripts.py
agentcore/genai-loft-demo/demos/: demo_01_basic_agent.py  demo_02_agent_with_memory.py  demo_03_shared_tools.py  demo_04_interactive_client.py  demo_04_production_agent.py
agentcore/genai-loft-demo/docs/: DEMO_IMPLEMENTATION_GUIDE.md  DEMO_SCRIPT.md  runtime_commands.md
agentcore/genai-loft-demo/infrastructure/: __init__.py  api_spec.json  lambda_function.py  setup_gateway.py  setup_memory.py
agentcore/genai-loft-demo/scripts/: __init__.py  debug_streaming.py
agentcore/genai-loft-demo/src/: __init__.py  demo_utils.py  runtime_agent_wrapper.py  streaming_display.py
agentcore/genai-loft-demo/src/interactive_chat/: __init__.py  chat.py  config.py  formatters.py  gateway_commands.py  memory_commands.py  runtime_commands.py  utilities.py
agentcore/genai-loft-demo/tests/: test_interactive_chat.py  test_message_tracking.py  test_visual_ux.py
debris-tracker/: requirements.txt
nemotron/: deploy.py  pyproject.toml
nikud/: cleanup.py  deploy.py
route53/r53mgmt/: .gitignore  AGENTS.md  README.md  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
sagemaker/: copy-container-buildspec.yml
sagemaker/dicta-nemotron/: README.md  cleanup.py  deploy.py  model-uploader.yaml  test.py
thinking/: README.md  deploy.py  model-uploader.yaml  test.py
(+42 files in other folders)
